--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -13,6 +13,9 @@
       "default": "./dist/index.js"
     }
   },
+  "dependencies": {
+    "@nestjs/mapped-types": "*"
+  },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
