--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: Install pmpm
+      - name: Install pnpm
         run: npm install -g pnpm
       - name: Install dependencies
         run: pnpm install
