--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,21 +1,36 @@
 {
-  "extends": "@repo/typescript-config/base.json",
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "@repo/eslint-config/tsconfig.nest.json",
   "compilerOptions": {
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
-    "sourceMap": true,
-    "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "outDir": "./dist",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": ["src/**/*"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/*.e2e-spec.ts"
+  ]
 }
+
+// {
+//   "$schema": "https://json.schemastore.org/tsconfig",
+//   "extends": "@repo/eslint-config/tsconfig.nest.json",
+//   "compilerOptions": {
+//     "target": "ESNext",
+//     "module": "es2015",
+//     "moduleResolution": "bundler",
+//     "outDir": "./dist",
+//     "emitDeclarationOnly": true,
+//     "paths": {
+//       "@/*": ["./src/*"]
+//     }
+//   },
+//   "include": ["src/**/*"]
+// }
