--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@commitlint/config-conventional": "^19.6.0",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^9.17.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
     "prettier": "^3.2.5",
