--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,17 +3,39 @@
   "version": "0.0.0",
   "private": true,
   "files": [
-    "library.js",
-    "next.js",
-    "react-internal.js"
+    "eslint.shared.mjs",
+    "eslint.frontend.mjs",
+    "eslint.react.mjs",
+    "eslint.next.mjs",
+    "tsconfig.shared.json",
+    "tsconfig.nest.json",
+    "tsconfig.next.json",
+    "prettierrc.mjs"
   ],
   "devDependencies": {
-    "@vercel/style-guide": "^5.2.0",
-    "eslint-config-turbo": "^2.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-only-warn": "^1.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
+    "@next/eslint-plugin-next": "^15.1.2",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "typescript": "5.5.4"
+    "@typescript-eslint/parser": "^7.1.0",
+    "@vercel/style-guide": "^5.2.0",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-turbo": "^2.0.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-only-warn": "^1.1.0",
+    "eslint-plugin-perfectionist": "^4.4.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-compiler": "19.0.0-beta-b2e8e9c-20241220",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.18.2"
+  },
+  "peerDependencies": {
+    "typescript": "^5.5.4"
   }
 }
