--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,10 +2,12 @@
   "name": "@repo/types",
   "version": "0.0.0",
   "private": true,
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
-    "lint": "eslint . --max-warnings 0"
+    "clean": "rm -rf dist"
   },
   "exports": {
     ".": {
