--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@repo/typescript-config/base.json",
+  "extends": "@repo/eslint-config/tsconfig.shared.json",
   "compilerOptions": {
     "outDir": "dist",
     "strict": false
