feat(prisma.schema): prisma & GraphQl
steup prisma with graphql for api

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\" --ignore-path .gitignore",
+    "format:check": "pnpm format --check",
+    "format:write": "pnpm format --write",
     "test": "turbo test",
     "clean": "turbo run clean && rm -rf node_modules",
     "prepare": "husky install",
