--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@repo/bridge": "workspace:^",
     "@repo/eslint-config": "workspace:*",
+    "@repo/hooks": "workspace:^",
     "@repo/ui": "workspace:*",
-    "@repo/utility": "workspace:^",
+    "@repo/utility": "workspace:*",
     "next": "15.1.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
