feat(fecth graphql): graphql with some ui templates
some ui components have been developed within a new adopted projectt folder organisation of the
components

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -22,7 +22,12 @@
     "@repo/eslint-config": "workspace:*",
     "@types/eslint": "9.6.1",
     "@types/node": "^20",
+    "@types/react": "^19.0.2",
     "eslint": "9.13.0",
+    "react": "^19.0.0",
     "typescript": "5.6.3"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0"
   }
 }
