--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "private": true,
   "exports": {
-    "./login": "./src/login.tsx",
-    "./schemas": "./src/schemas/index.ts"
+    "./schemas": "./src/schemas/index.ts",
+    "./custom": "./src/custom/index.ts",
+    "./actions": "./src/actions/index.ts"
   },
   "scripts": {
     "dev": "tsc -w",
@@ -20,10 +21,15 @@
     "@types/node": "^20.11.24",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
+    "next": "^15.1.3",
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@repo/bridge": "workspace:^",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "peerDependencies": {
+    "next": "^15.1.3"
   }
 }
