--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,6 +15,9 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@repo/bridge": "workspace:^",
+    "@repo/hooks": "workspace:^",
+    "@repo/types": "workspace:^",
+    "@repo/utility": "workspace:^",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
