--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,9 +15,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.19.8",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@repo/eslint-config": "workspace:^",
     "expo": "~52.0.23",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -41,10 +43,11 @@
     "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.18",
     "@types/react-test-renderer": "^18.3.0",
+    "babel-preset-expo": "^12.0.4",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
