--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -15,7 +15,7 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
+    "@repo/eslint-config": "workspace:^",
     "@repo/typescript-config": "workspace:*",
     "@turbo/gen": "^1.12.4",
     "@types/node": "^20.11.24",
@@ -25,9 +25,12 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@repo/bridge": "workspace:^",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.1"
   },
   "peerDependencies": {
     "next": "^15.1.3"
