--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -5,6 +5,6 @@
     "module": "ESNext",
     "moduleResolution": "bundler"
   },
-  "include": ["src"],
+  "include": ["src", "types.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
