--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
-    "@repo/ui": "workspace:*",
     "@eslint/js": "^9.17.0",
+    "@repo/ui": "workspace:*",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-onboarding": "^8.4.7",
@@ -29,12 +29,15 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.14.0",
+    "postcss": "^8.4.49",
     "storybook": "^8.4.7",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
