--- a/apps/mobile/.npmrc
+++ b/apps/mobile/.npmrc
@@ -1,1 +1,8 @@
-node-linker=hoisted
+#node-linker=hoisted
+auto-install-peers=true
+public-hoist-pattern[]=*metro* 
+public-hoist-pattern[]=@babel* 
+public-hoist-pattern[]=*prettier* 
+public-hoist-pattern[]=*eslint* 
+public-hoist-pattern[]=*typescript* 
+public-hoist-pattern[]=*react*
