--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -1,32 +1,10 @@
-// {
-//   "$schema": "https://json.schemastore.org/tsconfig",
-//   "extends": "@repo/eslint-config/tsconfig.shared.json",
-//   "compilerOptions": {
-//     "target": "ESNext",
-//     "module": "es2015",
-//     "moduleResolution": "bundler",
-//     "outDir": "./dist",
-//     "declaration": true,
-//     "emitDeclarationOnly": true,
-//     "paths": {
-//       "@/*": ["./src/*"]
-//     }
-//   },
-//   "include": [
-//     "src/**/*",
-//     "scripts/**/*",
-//     ".expo/types/**/*.ts",
-//     "expo-env.d.ts"
-//   ]
-// }
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
@@ -34,6 +12,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts"
+    "nativewind-env.d.ts",
+    "jest.setup.ts"
   ]
 }
