fix(expo): mobile app fixes
metro and babel

BREAKING CHANGE: break the entire app

--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
+    "dev": "turbo dev --concurrency=20",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\" --ignore-path .gitignore",
+    "format": "prettier --write \"**/*.*\" --config .prettierrc.json  --ignore-path .gitignore --ignore-path .prettierignore",
     "format:check": "pnpm format --check",
     "format:write": "pnpm format --write",
     "test": "turbo test",
-    "clean": "turbo run clean && rm -rf node_modules",
+    "clean": "rm rf -v --glob \"./{apps,packages}/**/{.turbo,.next,.expo,build}\"",
+    "clean:all": "rm rf  -v --glob \"./**/{node_modules,.turbo,.next,.expo,build}\"",
+    "type-check": "turbo type-check",
     "prepare": "husky install",
     "postinstall": "husky",
     "lint-staged": "lint-staged",
