--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,10 +7,11 @@
   "license": "UNLICENSED",
   "type": "commonjs",
   "scripts": {
+    "clean:git": "git clean -xdf dist .turbo node_modules",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "dev": "nest start --watch",
+    "dev": "pnpm prisma generate && nest start  --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
