--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean:git": "git clean -xdf .next .turbo node_modules",
     "dev": "next dev --turbopack --port 4001",
     "build": "next build",
     "start": "next start",
