--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "clean:git": "git clean -xdf dist node_modules",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
