--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean": "git clean -xdf .next .turbo node_modules",
     "dev": "next dev --turbopack --port 4000",
     "build": "next build",
     "start": "next start",
@@ -26,7 +27,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.0.2",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^25.0.1",
