--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,9 +5,9 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    
     "build": "tsc",
-    "dev": "tsc -w",
-    "clean": "rm -rf dist"
+    "dev": "tsc -w"
   },
   "exports": {
     ".": {
