--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
@@ -13,6 +14,7 @@
     "expo-env.d.ts",
     "nativewind-env.d.ts",
     "jest.setup.ts",
-    "tailwind.config.js"
-  ]
+    "tailwind.config.ts"
+  ],
+  "exclude": ["node_modules", "build", "dist", ".expo"]
 }
