--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,7 +5,6 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    
     "build": "tsc",
     "dev": "tsc -w"
   },
@@ -20,6 +19,7 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/eslint": "9.6.1",
     "@types/node": "^20",
     "@types/react": "^19.0.2",
