--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "extends": "@repo/eslint-config/tsconfig.shared.json",
+  // "extends": "@repo/eslint-config/tsconfig.shared.json",
+  "extends": "@repo/typescript-config/tsconfig.shared.json",
   "compilerOptions": {
     "outDir": "dist",
     "strict": false
