--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,7 +30,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
