--- a/packages/utility/package.json
+++ b/packages/utility/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/eslint": "9.6.1",
     "@types/express": "^5.0.0",
     "@types/node": "^20",
