fix(codegen.ts): fix eslint issue
include codegen.ts file to the tsconfig.json setup

--- a/packages/bridge/tsconfig.json
+++ b/packages/bridge/tsconfig.json
@@ -4,6 +4,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src", "./*.d.ts"],
+  "include": ["src", "./*.d.ts", "./codegen.ts"],
   "exclude": ["node_modules", "dist"]
 }
